--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div id="footer">&copy 2008 <a href="http://www.benlog.org">Ben Vinegar</a></div>
     </div>
     
-    <script src="jquery.abbreviator.js" type="text/javascript"></script>
+    <script src="http://github.com/cehoffman/abbreviator/tree/master/jquery.abbreviator.js?raw=true" type="text/javascript"></script>
     
     <script>
       $(function() {
